--- a/css/stilos.css
+++ b/css/stilos.css
@@ -420,7 +420,9 @@ footer div ul li a {
     padding: 5px 30px;
   }
   .mainIndex .divColumnaIndex div {
-    width: 400px;
+    width: 100%;
+    height: 50%;
+    margin-top: 10px;
   }
   .mainIndex .divColumnaIndex p {
     margin: 0;
