--- a/css/stilos.css
+++ b/css/stilos.css
@@ -11,23 +11,23 @@ html {
   animation-name: animacion;
   animation-duration: 4s;
   animation-iteration-count: infinite;
-  animation-delay: 3s;
+  animation-delay: 0s;
 }
 @keyframes animacion {
   0% {
-    color: #EC9A29;
+    background-color: #EC9A29;
   }
   25% {
-    color: #F2F7F2;
+    background-color: #A8201A;
   }
   50% {
-    color: #A8201A;
+    background-color: #F2F7F2;
   }
   75% {
-    color: #1098F7;
+    background-color: #1098F7;
   }
   100% {
-    color: #EC9A29;
+    background-color: #EC9A29;
   }
 }
 
