--- a/css/stilos.css
+++ b/css/stilos.css
@@ -9,26 +9,34 @@ html {
 
 .animacion, .mainModelos h1 {
   animation-name: animacion;
-  animation-duration: 4s;
+  animation-duration: 3.5s;
   animation-iteration-count: infinite;
   animation-delay: 0s;
+  box-shadow: 0px -5px 20px 5px white;
 }
 @keyframes animacion {
   0% {
-    background-color: #EC9A29;
+    color: #A8201A;
   }
-  25% {
-    background-color: #A8201A;
+  20% {
+    color: #EC9A29;
   }
-  50% {
-    background-color: #F2F7F2;
+  40% {
+    color: #1098F7;
   }
-  75% {
-    background-color: #1098F7;
+  60% {
+    color: #A8201A;
+  }
+  80% {
+    color: #EC9A29;
   }
   100% {
-    background-color: #EC9A29;
+    color: #1098F7;
   }
+}
+
+.gradianteH1, .mainModelos h1 {
+  background-image: linear-gradient(to right, #A8201A, #EC9A29, #1098F7);
 }
 
 /* NAVBARRA*/
@@ -368,7 +376,6 @@ html {
   margin: 6px 0;
   padding: 20px 0;
   font-weight: 900;
-  color: rgb(47, 43, 43);
 }
 .mainModelos .sectionModelos div .cuadroModelos {
   display: grid;
