--- a/sass/stilos.scss
+++ b/sass/stilos.scss
@@ -380,16 +380,16 @@
 
 .mainModelos{
     background-color: variables.$colorBackground;
-    h1{
-        text-decoration: none;
-        font-size: 25px;
-        font-family: "Montserrat", serif;
-        margin: 6px 0;
-        padding: 20px 0;
-        font-weight: 900;
-        color: rgb(47, 43, 43);
-        @extend .animacion;
-    }
+        h1{
+            text-decoration: none;
+            font-size: 25px;
+            font-family: "Montserrat", serif;
+            margin: 6px 0;
+            padding: 20px 0;
+            font-weight: 900;
+            @extend .animacion;
+            @extend .gradianteH1;
+        }
     .sectionModelos{
         div{
             .cuadroModelos{
