--- a/sass/_mixin.scss
+++ b/sass/_mixin.scss
@@ -7,3 +7,10 @@
     border-radius: 10px 10px 30px 30px;
     text-decoration: none;
 }
+@mixin hover{
+    box-shadow: 0 0 20px silver;
+    transition: 0.5s;
+    color: black;
+    background-color: azure;
+    border-radius: 20px;
+}
