--- a/sass/_animacion.scss
+++ b/sass/_animacion.scss
@@ -6,25 +6,17 @@
     box-shadow: 0px -5px 20px 5px white;
     @keyframes animacion {
         0% {
-            color: #A8201A;
+            color: #c8c7c9;
         }
-        20%{
-            color: #EC9A29;
+        50%{
+            color: #9A939A;
         }
-        40%{
-            color: #1098F7;
-        }
-        60%{
-            color: #A8201A;
-        }
-        80%{
-            color: #EC9A29;
-        }
-        100% {
-            color: #1098F7;
+        100%{
+            color: #79707B;
+            
         }
     }
 }
 .gradianteH1{
-    background-image: linear-gradient(to right, #A8201A, #EC9A29, #1098F7);
+    background-image: linear-gradient(to right, #1A1A1D, #3B1C32, #6A1E55,#A64D79);
 }
