--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,7 @@
 $center: center;
 $color: #f5f5dc;
 $width: 100%;
-$colorBackground:rgba(26, 20, 35);
+$colorBackground:#1a1423;
+.fondo {
+    background: linear-gradient(#1a1423 25%, #1a1423 70%, #23022e 80%, #23022e 100%);
+}
